fixed: (bug) Breadcrumbs .crumb-sep was not showing color properly.

--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -38,6 +38,7 @@
   --vp-c-brand-3: #6d28d9;
   --vp-c-brand: #8839ef;
   --banner-bg: #8839ef;
+  --vp-c-b-divider: #000000;
 
   /* Home hero gradient (light) */
   --vp-home-hero-image-background-image: linear-gradient(
@@ -74,6 +75,7 @@
   --vp-c-bg-elv: #000000;
   --vp-c-bg-soft: #0a0a0a;
   --vp-c-divider: #1a1a1a;
+  --vp-c-b-divider: #ffffff;
 
   /* Brand */
   --vp-c-brand-1: #cba6f7;
